--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ psycopg2>=2.7.5,<2.8.0
 django-model-utils>=4.1.1,<4.2.0
 django-localflavor>=3.0.1,<3.1.0
 python-dateutil>=2.8.1,<2.9.0
+requests>=2.25.1,<2.26.0
+celery>=5.0.5,<5.1.0
 
 flake8>=3.8.4,<3.9.0
