--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,14 @@
 version: "3"
 
 services:
+  memcached:
+    image: memcached
+
+  redis:
+    image: redis:latest
+    ports:
+      - '6379:6379'
+    
   app:
     build:
       context: .
